--- a/src/lib/components/locales/ru.json
+++ b/src/lib/components/locales/ru.json
@@ -4,7 +4,8 @@
 		"lead": "Doktorunuzla İnternet Üzerinden Bağlantı Kurun, Sağlığınızı Şimdi Yönetin",
 		"search": "Поиск",
 		"symptoms": "Cимптомы",
-		"faq": "Часто задаваемые вопросы"
+		"faq": "Часто задаваемые вопросы",
+		"doctor": "врач"
 	},
 	"nav": {
 		"home": "Дом",
@@ -14,7 +15,8 @@
 		"appointments": "Назначения",
 		"blog": "Блог",
 		"contact": "Контакт",
-		"account": "Мой аккаунт"
+		"account": "Мой аккаунт",
+		"login": "Авторизоваться"
 	},
 	"appointment": {
 		"loginToSee": "Randevularınızı görmek için ",
@@ -22,5 +24,13 @@
 	},
 	"other": {
 		"notFound": "Sonuç bulunamadı"
+	},
+	"faq": {
+		"q1": "Как записаться на прием к врачу?",
+		"a1": "Записаться на прием очень просто. Выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Записаться на прием». Выберите врача из списка доступных врачей. Выберите удобную дату и время для записи. Подтвердите детали встречи и завершите бронирование.",
+		"q2": "Что делать, если мне нужно отменить или перенести встречу?",
+		"a2": "Если вам нужно отменить или перенести встречу, выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Мои встречи». Найдите встречу, которую вы хотите изменить. Нажмите «Отменить» или « Кнопка «Перенести». При переносе выберите новую дату и время и подтвердите изменения.",
+		"q3": "Как мне присоединиться к видеозвонку с врачом?",
+		"a3": "Чтобы присоединиться к видеозвонку со своим врачом, выполните следующие действия: Войдите в свою учетную запись. Перейдите в раздел «Мои встречи». Найдите предстоящую встречу и нажмите на нее. В запланированное время нажмите « Кнопка «Присоединиться к видеовызову». Убедитесь, что ваша камера и микрофон включены для вызова"
 	}
 }
