v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -32,7 +32,8 @@
 		"no_appointment": "Planlaşdırılmış görüş yoxdur .."
 	},
 	"other": {
-		"notFound": "Nəticə Tapılmadı"
+		"notFound": "Nəticə Tapılmadı",
+		"search_symptoms": "Simptomlarınızı yazın"
 	},
 	"faq": {
 		"q1": "Həkim qəbulunu necə sifariş edə bilərəm?",
