v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -16,7 +16,8 @@
 		"blog": "Blog",
 		"contact": "Əlaqə",
 		"account": "Hesabım",
-		"login": "Giriş"
+		"login": "Giriş",
+		"messages": "Mesajlar"
 	},
 	"doctor": {
 		"about": "Həkim Haqqında",
