--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -62,6 +62,7 @@
 		"success": "Uğurlu",
 		"add_pp": "Yeni şəkil əlavə et",
 		"remove_pp": "Profil şəklini sil",
+		"view_pp":"Şəklə bax",
 		"close": "Bağla",
 		"add_file":"Fayl əlavə et"
 	},
