v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -64,7 +64,8 @@
 		"remove_pp": "Profil şəklini sil",
 		"view_pp":"Şəklə bax",
 		"close": "Bağla",
-		"add_file":"Fayl əlavə et"
+		"add_file":"Fayl əlavə et",
+		"wait": "Gözləyin"
 	},
 	"login": {
 		"login_header": "Hesaba giriş",
