--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -30,7 +30,8 @@
 		"loginToSee": "Randevuları görmək üçün hesaba",
 		"login": "giriş et",
 		"get": "Görüş Al",
-		"no_appointment": "Planlaşdırılmış görüş yoxdur .."
+		"no_appointment": "Planlaşdırılmış görüş yoxdur ..",
+		"planned": "Planlaşdırılan görüş"
 	},
 	"other": {
 		"notFound": "Nəticə Tapılmadı",
@@ -65,7 +66,9 @@
 		"view_pp": "Şəklə bax",
 		"close": "Bağla",
 		"add_file": "Fayl əlavə et",
-		"wait": "Gözləyin"
+		"wait": "Gözləyin",
+		"details": "Ətraflı",
+		"send_msg": "Mesaj göndər"
 	},
 	"login": {
 		"login_header": "Hesaba giriş",
@@ -94,5 +97,19 @@
 		"10": "Oktyabr",
 		"11": "Noyabr",
 		"12": "Dekabr"
+	},
+	"nations": {
+		"arab": "Ərəb",
+		"iran": "İran",
+		"turk": "Türkiyə",
+		"aze": "Azərbaycan"
+	},
+	"langs": {
+		"arab": "Ərəbcə",
+		"iran": "Farsca",
+		"turk": "Türkcə",
+		"aze": "Azərbaycanca",
+		"eng": "İngiliscə",
+		"ru": "Rusca"
 	}
 }
