v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -1,6 +1,6 @@
 {
 	"home": {
-		"hero": "Sağlığınız üçün burdayıq",
+		"hero": "Online Səhiyyə Platformanız",
 		"lead": "Həkiminizlə onlayn əlaqə saxlayın, sağlamlığınızı indi idarə edin",
 		"search": "Axtar",
 		"symptoms": "Simptomlar",
