--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -75,7 +75,9 @@
 		"add_file": "Fayl əlavə et",
 		"wait": "Gözləyin",
 		"details": "Ətraflı",
-		"send_msg": "Mesaj göndər"
+		"send_msg": "Mesaj göndər",
+		"message_sent": "Mesaj göndərildi!",
+		"thank_for_contact": "Əlaqə saxladığınız üçün təşəkkürlər"
 	},
 	"login": {
 		"login_header": "Hesaba giriş",
@@ -89,7 +91,9 @@
 		"name_surname": "Ad Soyad",
 		"email": "Email",
 		"error": "Xəta! İstifadəçi adı vəya şifrə yanlışdır.",
-		"try_again": "Zəhmət olmasa yenidən cəhd edin"
+		"try_again": "Zəhmət olmasa yenidən cəhd edin",
+		"contact": "Əlaqə vasitəsi",
+		"message": "Mesajınız"
 	},
 	"months": {
 		"1": "Yanvar",
