v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -87,7 +87,10 @@
 	},
 	"call": {
 		"mic_off": "Mikrofonu söndür",
-		"mic_on": "Mikrofonu yandır"
+		"mic_on": "Mikrofonu yandır",
+		"end": "Görüşü sonlandır",
+		"no": "Xeyr",
+		"yes": "Sonladır"
 	},
 	"login": {
 		"login_header": "Hesaba giriş",
