--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -87,7 +87,8 @@
 		"send_msg": "Mesaj göndər",
 		"message_sent": "Mesaj göndərildi!",
 		"thank_for_contact": "Əlaqə saxladığınız üçün təşəkkürlər",
-		"back": "Geri"
+		"back": "Geri",
+		"thank_for_review": "Dəyərləndirməniz üçün təşəkkürlər"
 	},
 	"call": {
 		"mic_off": "Mikrofonu söndür",
