v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -1,7 +1,7 @@
 {
 	"home": {
 		"hero": "Online Səhiyyə Platformanız",
-		"lead": "Həkiminizlə onlayn əlaqə saxlayın, sağlamlığınızı indi idarə edin",
+		"lead": "Xarici Həkimlərlə Götüntülü Konsultasiya",
 		"search": "Axtar",
 		"symptoms": "Simptomlar",
 		"faq": "Tez tez soruşulan suallar",
