v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -19,7 +19,8 @@
 		"login": "Giriş",
 		"logout": "Çıxış",
 		"messages": "Mesajlar",
-		"about": "Haqqımızda"
+		"about": "Haqqımızda",
+		"menu": "Menyu"
 	},
 	"doctor": {
 		"about": "Həkim Haqqında",
