v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -42,7 +42,7 @@
 		"loginToSee": "Randevuları görmək üçün hesaba",
 		"login": "giriş et",
 		"get": "Həkimdən Görüş Al",
-		"no_appointment": "Planlaşdırılmış görüş yoxdur",
+		"no_appointment": "Görüş yoxdur",
 		"planned": "Planlaşdırılan görüş",
 		"list": "Görüşlərim"
 	},
