v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -99,7 +99,8 @@
 		"back": "Geri",
 		"thank_for_review": "Dəyərləndirməniz üçün təşəkkürlər",
 		"contact_us": "Bizimlə Əlaqə",
-		"lang_selection": "Dil Seçimi"
+		"lang_selection": "Dil Seçimi",
+		"pay": "Ödəniş et"
 	},
 	"profile": {
 		"docs": "Analizlərim və Reseptlərim",
