v$(node -p -e require('../package.json').version)

--- a/src/lib/components/locales/az.json
+++ b/src/lib/components/locales/az.json
@@ -57,7 +57,8 @@
 		"notFound": "Nəticə Tapılmadı",
 		"search_symptoms": "Simptomlarınızı yazın",
 		"welcome": "Xoş Gəldiniz",
-		"no_msg": "Yeni Mesaj Yoxdur"
+		"no_msg": "Yeni Mesaj Yoxdur",
+		"no_file": "Fayl yoxdur"
 	},
 	"faq": {
 		"q1": "Həkim qəbulunu necə sifariş edə bilərəm?",
